fix: fix text slider

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -28,8 +28,8 @@
 			<div class="slider_txt">
 				<p class="slides txt1">А ты любишь голосовые сообщения?</p>
 				<p class="slides txt2">Как тебе такая идея?</p>
-				<p class="slides txt3">Будь как он и его хоумис</p>
-				<p class="slides txt4">Новопассит</p>
+				<p class="slides txt3">Будь как он и его хоумис!</p>
+				<p class="slides txt4">Новопассит!</p>
 			</div>
 			<div class="control">
 				<label for="point1"></label>
